--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,6 @@
         <input name="linkInput" type="text" id="input-form">
         <button id="submit-button" onclick="sendLink()">Get Link</button>
     </div>
-    <audio id="audio-player"></audio>
+    <audio controls id="audio-player"></audio>
 </body>
 </html>
