trying to fix audio format

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
         <input name="linkInput" type="text" id="input-form">
         <button id="submit-button" onclick="sendLink()">Get Link</button>
     </div>
-    <audio controls id="audio-player"></audio>
+    <video controls id="audio-player"></video>
+    <a id="link">Download</a>
 </body>
 </html>
