--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="static\style.css">
     <link rel="icon" type="image/png" sizes="32x32" 
     href="{{ url_for('static', filename='favicon-32x32.png') }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Roboto&display=swap" rel="stylesheet">
     <script src="static\main.js"></script>
     <title>AudioRIP</title>
 </head>
