--- a/static/style.css
+++ b/static/style.css
@@ -37,7 +37,7 @@ body {
     color: var(--turqoise);
     font-family: var(--title-font);
     font-size: 8rem;
-    padding: 2rem;
+    margin: 2rem;
 }
 
 .input-container {
@@ -46,29 +46,18 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding: 2rem;
-}
-
-.results-box {
-    width: 50%;
-    height: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    border: 4px solid var(--turqoise);
-    border-radius: 8px;
-    overflow: auto;
+    margin: 2rem;
 }
 
 .result-box {
-    width: 100%;
+    width: 50%;
     height: auto;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    border-bottom: 4px solid var(--turqoise);
+    border: 4px solid var(--turqoise);
+    border-radius: 8px;
     background-color: var(--dark-turqoise);
 }
 
