--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         <button class="button is-primary" id="submit-button" onclick="sendLink()">Rip It</button>
     </div>
     <div id="1" class="result-box">
-        <div class="song-title">Test Title - Me.mp3</div>
+        <div id="song-title" class="song-title">Test Title - Me.mp3</div>
         <a id="link" download=""><div class="button is-link">Download</div></a>
     </div>
 </body>
