--- a/templates/index.html
+++ b/templates/index.html
@@ -21,8 +21,9 @@
         <button class="button is-primary" id="submit-button" onclick="sendLink()">Rip It</button>
     </div>
     <div id="1" class="result-box">
-        <div id="song-title" class="song-title">Test Title - Me.mp3</div>
-        <a id="link" download=""><div class="button is-link">Download</div></a>
+        <img src="{{ url_for('static', filename='Infinity-1s-200px.svg') }}" id="loading"></img>
+        <div id="song-title" class="song-title">Enter a Youtube URL (other sites might work, not tested)</div>
+        <a class="hidden" id="link" download=""><div class="button is-link">Download</div></a>
     </div>
 </body>
 </html>
