send options in json,  options from json to ytdlp

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,10 +40,11 @@
                         <option value="opus-256">opus-256 kbps</option>
                     </optgroup>
                     <optgroup label="AAC">
-                        <option value="aac">AAC</option>
+                        <option value="aac-128">AAC-128</option>
+                        <option value="aac-128">AAC-256</option>
                     </optgroup>
                     <optgroup label="FLAC">
-                        <option value="flac">FLAC</option>
+                        <option value="flac-0">FLAC</option>
                     </optgroup>
                 </select>
             </div>
