--- a/static/style.css
+++ b/static/style.css
@@ -18,7 +18,7 @@
 html {
     height: 100%;
     width: 100%;
-    overflow: hidden;
+    overflow: hidden!important;
 }
 
 body {
@@ -64,7 +64,7 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between left;
+    justify-content: space-between;
     border: 4px solid var(--turqoise);
     border-radius: 8px;
     background-color: var(--dark-turqoise);
@@ -103,4 +103,13 @@ body {
     align-items: center;
     justify-content: space-evenly;
     margin-bottom: 2rem;
+}
+
+@media screen and (max-width: 780px) {
+    :root {
+        font-size: 1.5vw !important;
+    }
+    .main-box {
+        width: 75%;
+    }
 }
